--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body onload="fetchContacts()">
     <div id="table">Contacts loading...</div>
+    <button id="refresh" type="button">Refresh</button>
     <button id="addContact" type="button">Add Contact</button>
 
     <script src="config.js"></script>
